Add filter title

--- a/components/projects/allProjects.module.scss
+++ b/components/projects/allProjects.module.scss
@@ -8,12 +8,18 @@
     padding: 50px 50px 0;
   }
 
-  .filterButtons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    button {
-      margin: 2px;
+  .filter {
+    p {
+      text-align: center;
+    }
+
+    .filterButtons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      button {
+        margin: 2px;
+      }
     }
   }
 
