--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -1,4 +1,5 @@
 .navbar {
+  display: none;
   z-index: 1;
   height: 65px;
   width: 100%;
@@ -39,6 +40,7 @@
   }
 
   &.sticky {
+    display: block;
     position: fixed;
     top: 0;
     color: red;
@@ -79,6 +81,12 @@
       display: block;
       padding: 25px 0;
     }
+  }
+}
+
+@media only screen and (min-width: 480px) {
+  .navbar {
+    display: block;
   }
 }
 
