Add link to all posts

--- a/components/posts/featuredPosts.module.scss
+++ b/components/posts/featuredPosts.module.scss
@@ -9,6 +9,12 @@
     margin-bottom: 15px;
   }
 
+  .buttonWrapper {
+    display: flex;
+    justify-content: center;
+    padding: 50px 50px 0;
+  }
+
   @media only screen and (min-width: 768px) {
     padding: 100px 25px;
 
