Update gradient color

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,7 +13,7 @@
   --border-card: #cecece;
   --button-color: #687886;
   --button-border: #687886;
-  --gradient-primary: #687886;
+  --gradient-primary: #8bb2c3;
   --gradient-secondary: #aab8c5;
 }
 [data-theme='dark'] {
@@ -31,7 +31,7 @@
   --border-card: #4b5154;
   --button-color: #efe3cf;
   --button-border: #687886;
-  --gradient-primary: #687886;
+  --gradient-primary: #8bb2c3;
   --gradient-secondary: #aab8c5;
 }
 
