Add theme transition

--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   position: relative;
   // transition: ease 2s;
+  transition: background 2s;
 
   .container {
     display: flex;
