--- a/components/projects/featuredProjects.module.scss
+++ b/components/projects/featuredProjects.module.scss
@@ -3,6 +3,7 @@
 
   .project {
     background-color: var(--background-card);
+    transition: background 2s;
     margin-top: 50px;
     border: 1px solid var(--border-light);
     border-radius: 5px;
