--- a/components/projects/projects.module.scss
+++ b/components/projects/projects.module.scss
@@ -20,6 +20,7 @@
     padding: 25px;
     background-color: var(--background-card);
     border: 1px solid var(--border-card); //rgb(93, 101, 105) #cecece
+    transition: background 2s;
     margin-bottom: 25px;
     display: flex;
     flex-direction: column;
