--- a/components/projects/allProjects.module.scss
+++ b/components/projects/allProjects.module.scss
@@ -2,6 +2,10 @@
   min-height: 100vh;
   padding: 50px 15px;
 
+  h1 {
+    text-align: center;
+  }
+
   .buttonWrapper {
     display: flex;
     justify-content: center;
