--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -78,6 +78,15 @@ button {
   border: none;
 }
 
+// ULTIS
+.text-center {
+  text-align: center;
+}
+
+.vh-100 {
+  height: 100vh;
+}
+
 .btn {
   width: 100%;
   text-align: center;
