--- a/components/projects/featuredProjectItem.module.scss
+++ b/components/projects/featuredProjectItem.module.scss
@@ -1,22 +1,23 @@
 .project {
   background-color: var(--background-card);
   transition: background 1s;
-  margin-top: 50px;
+  margin: 50px 50px 0 0;
   border: 1px solid var(--border-light);
   border-radius: 5px;
   padding: 25px;
+  min-width: 100%;
+
+  h3 {
+    margin-bottom: 0;
+    color: var(--text-secondary);
+  }
+
+  small {
+    font-style: italic;
+    color: var(--text-tertiary);
+  }
 
   .columnLeft {
-    h3 {
-      margin-bottom: 0;
-      color: var(--text-secondary);
-    }
-
-    small {
-      font-style: italic;
-      color: var(--text-tertiary);
-    }
-
     .description {
       margin: 25px 0;
     }
@@ -27,7 +28,7 @@
         margin-right: 15px;
         color: var(--accent);
         display: block;
-        margin-bottom: 10px;
+        padding: 15px 15px 15px 0;
       }
 
       a:hover {
@@ -44,10 +45,10 @@
 
   .columnRight {
     max-width: 500px;
-    margin: 50px auto 0;
+    margin: 25px auto 0;
 
     .card {
-      height: 100%;
+      pointer-events: none;
       border: 1px solid #ffffff0d;
       border-radius: 5px;
       overflow: hidden;
@@ -116,7 +117,7 @@
       width: 50%;
       display: flex;
       flex-direction: column;
-      padding-right: 100px;
+      padding-right: 25px;
     }
 
     .columnRight {
