--- a/components/projects/featuredProjects.module.scss
+++ b/components/projects/featuredProjects.module.scss
@@ -1,13 +1,14 @@
 .projects {
+  min-height: 100vh;
   padding: 50px 15px;
 
-  .project {
-    background-color: var(--background-card);
-    transition: background 1s;
-    margin-top: 50px;
-    border: 1px solid var(--border-light);
-    border-radius: 5px;
-    padding: 25px;
+  .carousel {
+    cursor: grab;
+    overflow: hidden;
+
+    .innerCarousel {
+      display: flex;
+    }
   }
 
   .buttonWrapper {
@@ -16,63 +17,8 @@
     padding: 50px 50px 0;
   }
 
-  .columnLeft {
-    h3 {
-      margin-bottom: 0;
-      color: var(--text-secondary);
-    }
-
-    small {
-      font-style: italic;
-      color: var(--text-tertiary);
-    }
-
-    .description {
-      margin: 25px 0;
-    }
-
-    .portfolioLinks {
-      margin-top: auto;
-      a {
-        margin-right: 15px;
-        color: var(--accent);
-        display: block;
-        margin-bottom: 10px;
-      }
-
-      a:hover {
-        color: var(--text-primary);
-      }
-
-      i {
-        width: 20px;
-        margin-right: 5px;
-        color: var(--text-primary);
-      }
-    }
-  }
-
-  .columnRight {
-    max-width: 500px;
-    margin: 50px auto 0;
-
-    .card {
-      border: 1px solid #ffffff0d;
-      border-radius: 5px;
-    }
-
-    .card img {
-      height: 100%;
-      border-radius: 5px;
-    }
-
-    .card span {
-      display: block !important;
-    }
-  }
-
   @media only screen and (min-width: 768px) {
-    padding: 100px 25px 0;
+    padding: 100px 25px;
 
     .container {
       max-width: 1200px;
@@ -81,28 +27,6 @@
 
     .row {
       display: flex;
-    }
-
-    .columnLeft {
-      order: 1;
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      padding-right: 100px;
-    }
-
-    .columnRight {
-      order: 2;
-      width: 50%;
-      margin: 0;
-      margin-left: auto;
-    }
-  }
-
-  @media only screen and (min-width: 1020px) {
-    .projectLinks {
-      display: flex;
-      flex-direction: row;
     }
   }
 }
