Add iconscroll global css

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -87,6 +87,10 @@ button {
   min-height: 100vh;
 }
 
+.mt-50 {
+  margin-top: 50px;
+}
+
 .btn {
   width: 100%;
   text-align: center;
@@ -143,6 +147,48 @@ button {
 
   .row {
     display: flex;
+  }
+}
+
+.iconScroll {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) and (min-height: 768px) {
+  .iconScrollContainer {
+    .iconScroll {
+      position: relative;
+      margin: auto;
+      display: block;
+      width: 20px;
+      height: 40px;
+      border: 2px solid var(--border-card);
+      border-radius: 25px;
+    }
+
+    .iconScroll:before {
+      position: absolute;
+      left: 50%;
+      content: '';
+      width: 8px;
+      height: 8px;
+      background: var(--text-secondary);
+      margin-left: -4px;
+      top: 2px;
+      border-radius: 4px;
+      animation-duration: 1.5s;
+      animation-iteration-count: infinite;
+      animation-name: scroll;
+    }
+    @keyframes scroll {
+      0% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(26px);
+      }
+    }
   }
 }
 
