--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -16,11 +16,7 @@
   .logo {
     color: #fff;
     font-weight: bold;
-    background-image: linear-gradient(
-      310deg,
-      var(--gradient-primary),
-      var(--gradient-secondary)
-    );
+    background-color: var(--text-tertiary);
     border-radius: 50px;
     padding: 5px;
     font-size: 1.5rem;
