--- a/styles/swiper.scss
+++ b/styles/swiper.scss
@@ -17,3 +17,18 @@
 .swiper-pagination-bullet {
   background-color: var(--background-secondary) !important;
 }
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: var(--background-secondary) !important;
+}
+
+.swiper-button-next,
+.swiper-rtl .swiper-button-prev {
+  right: -15px !important;
+}
+
+.swiper-button-prev,
+.swiper-rtl .swiper-button-next {
+  left: -15px !important;
+}
