--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -14,12 +14,21 @@
   }
 
   .logo {
-    color: #fff;
+    color: #efe3cf;
     font-weight: bold;
-    background-color: var(--text-tertiary);
+    background-color: #8bb2c3;
     border-radius: 50px;
     padding: 5px;
     font-size: 1.5rem;
+    background-image: linear-gradient(
+      -45deg,
+      rgba(255, 255, 220, 0.2) 0%,
+      transparent 100%
+    );
+    width: 45px;
+    height: 45px;
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%),
+      0 1px 5px 0 rgb(0 0 0 / 20%);
   }
 
   .icon {
