Update hero & navbar

--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -67,7 +67,8 @@
   }
 
   .linkWrapper a:hover {
-    color: var(--text-primary);
+    color: var(--text-tertiary);
+    filter: drop-shadow(0px 3px 2px rgb(0 0 0 / 15%));
   }
 
   &.responsive {
