--- a/components/home/hero.module.scss
+++ b/components/home/hero.module.scss
@@ -12,6 +12,7 @@
 
     h1 {
       color: var(--text-secondary);
+      filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.15));
     }
 
     span {
@@ -51,6 +52,7 @@
       margin: 0 auto 15px;
 
       img {
+        filter: drop-shadow(0px -2px 4px rgb(0 0 0 / 35%));
         border-radius: 50%;
       }
     }
