--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -17,7 +17,7 @@
     color: #efe3cf;
     font-weight: bold;
     background-color: #8bb2c3;
-    border-radius: 50px;
+    border-radius: 50%;
     padding: 5px;
     font-size: 1.5rem;
     background-image: linear-gradient(
@@ -68,7 +68,6 @@
 
   .linkWrapper a:hover {
     color: var(--text-tertiary);
-    filter: drop-shadow(0px 3px 2px rgb(0 0 0 / 15%));
   }
 
   &.responsive {
@@ -116,6 +115,7 @@
       a {
         border-bottom: none;
         padding: 5px;
+        filter: drop-shadow(0px 3px 2px rgb(0 0 0 / 15%));
       }
 
       a:first-child {
