--- a/components/ui/modal/contactModal.module.scss
+++ b/components/ui/modal/contactModal.module.scss
@@ -78,7 +78,8 @@
   }
 
   @media only screen and (min-width: 768px) {
-    width: 600px;
+    min-width: 600px;
+    overflow: hidden;
     padding: 2rem;
 
     .contactForm {
