--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -14,7 +14,7 @@
   }
 
   .logo {
-    color: #efe3cf;
+    color: #ffffff;
     font-weight: bold;
     background-color: #8bb2c3;
     border-radius: 50%;
