Add background transition

--- a/components/layout/footer.module.scss
+++ b/components/layout/footer.module.scss
@@ -1,5 +1,6 @@
 .footer {
   background-color: var(--background-card);
+  transition: background 1s;
   color: var(--text-secondary);
   text-align: center;
   padding: 25px;
