Add filter to posts

--- a/components/posts/allPosts.module.scss
+++ b/components/posts/allPosts.module.scss
@@ -1,6 +1,21 @@
 .blog {
   padding: 50px 15px;
 
+  .filter {
+    p {
+      text-align: center;
+    }
+
+    .filterButtons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      button {
+        margin: 2px;
+      }
+    }
+  }
+
   .galleryWrap {
     margin-top: 50px;
   }
