--- a/components/projects/projectDetail.module.scss
+++ b/components/projects/projectDetail.module.scss
@@ -12,6 +12,41 @@
   small {
     color: var(--text-tertiary);
   }
+  .card {
+    border-radius: 5px;
+    padding: 25px;
+    background-color: var(--background-card);
+    transition: background 1s;
+    border: 1px solid var(--border-card);
+    margin: 25px 0;
+    display: flex;
+    flex-direction: column;
+
+    h4 {
+      margin: 0;
+      color: var(--text-secondary);
+    }
+
+    time {
+      color: var(--text-tertiary);
+    }
+
+    .cardAction {
+      display: flex;
+      flex-direction: row;
+      margin-top: auto;
+
+      a {
+        color: var(--accent);
+      }
+    }
+  }
+
+  @media only screen and (min-width: 768px) {
+    .card {
+      margin-bottom: unset;
+    }
+  }
 
   .projectLinks {
     display: flex;
