--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -10,6 +10,14 @@
   margin-top: 50px;
 }
 
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
+}
+
 .section {
   padding: 50px 15px;
 }
