--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -18,6 +18,18 @@
   margin-bottom: 100px;
 }
 
+.mr-25 {
+  margin-right: 25px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.d-block {
+  display: block;
+}
+
 .section {
   padding: 50px 15px;
 }
