--- a/styles/swiper.scss
+++ b/styles/swiper.scss
@@ -1,10 +1,36 @@
 // Swiper fix
-.swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullets.swiper-pagination-horizontal,
-.swiper-pagination-custom,
-.swiper-pagination-fraction {
-  bottom: -30px !important;
+.projectDetail {
+  .swiper-horizontal > .swiper-pagination-bullets,
+  .swiper-pagination-bullets.swiper-pagination-horizontal,
+  .swiper-pagination-custom,
+  .swiper-pagination-fraction {
+    // bottom: -30px !important;
+    background-color: var(--transparent-primary);
+    padding: 5px;
+    border-radius: 6px;
+    border: 1px solid var(--border-card);
+  }
+
+  // .swiper-button-next,
+  // .swiper-rtl .swiper-button-prev {
+  //   background-color: var(--transparent-primary);
+  //   padding: 25px;
+  //   border-radius: 6px;
+  //   border: 1px solid var(--border-card);
+  // }
+
+  // .swiper-button-prev,
+  // .swiper-rtl .swiper-button-next {
+  //   background-color: var(--transparent-primary);
+  //   padding: 25px;
+  //   border-radius: 6px;
+  //   border: 1px solid var(--border-card);
+  // }
 }
+
+// .swiper-pagination-bullet {
+//   padding: 5px;
+// }
 
 .swiper-pagination-bullet {
   background-color: var(--background-secondary) !important;
@@ -36,9 +62,9 @@
 }
 
 .projectDetail {
-  .swiper {
-    margin: 50px;
-  }
+  // .swiper {
+  //   margin: 50px;
+  // }
 
   .swiper-slide {
     display: flex;
