--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -108,7 +108,7 @@
       .linkWrapper {
         padding: unset;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         width: 100%;
       }
 
