--- a/components/projects/projectDetail.module.scss
+++ b/components/projects/projectDetail.module.scss
@@ -42,6 +42,18 @@
     }
   }
 
+  .description {
+    max-width: 1000px;
+    border-radius: 5px;
+    padding: 25px;
+    background-color: var(--background-card);
+    transition: background 1s;
+    border: 1px solid var(--border-card);
+    margin: 25px 0;
+    display: flex;
+    flex-direction: column;
+  }
+
   @media only screen and (min-width: 768px) {
     .card {
       margin-bottom: unset;
