--- a/styles/swiper.scss
+++ b/styles/swiper.scss
@@ -11,6 +11,11 @@
     border: 1px solid var(--border-card);
   }
 
+  .swiper-button-next,
+  .swiper-button-prev {
+    top: calc(50% - 100px);
+  }
+
   // .swiper-button-next,
   // .swiper-rtl .swiper-button-prev {
   //   background-color: var(--transparent-primary);
