--- a/components/projects/projectDetail.module.scss
+++ b/components/projects/projectDetail.module.scss
@@ -1,4 +1,9 @@
 .projectDetail {
+  //Select p around <small>
+  p:nth-child(3) {
+    margin: 0;
+  }
+
   h1 {
     margin-bottom: 0;
     color: var(--text-secondary);
@@ -11,7 +16,10 @@
 
   small {
     color: var(--text-tertiary);
+    display: block;
+    margin-bottom: 50px;
   }
+
   .card {
     border-radius: 5px;
     padding: 25px;
