--- a/components/projects/projectItem.module.scss
+++ b/components/projects/projectItem.module.scss
@@ -9,6 +9,34 @@
   flex-direction: column;
   min-height: 260px;
 
+  .placeholderContainer {
+    margin: 20px 0;
+    width: 100%;
+    max-height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .placeholder {
+      text-align: center;
+      margin: 100% 0;
+      color: #ffffff;
+      font-weight: bold;
+      background-color: #8bb2c3;
+      border-radius: 50%;
+      padding: 5px;
+      font-size: 1.5rem;
+      background-image: linear-gradient(
+        -45deg,
+        rgba(255, 255, 220, 0.2) 0%,
+        transparent 100%
+      );
+      width: 200px;
+      height: 200px;
+      box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%),
+        0 1px 5px 0 rgb(0 0 0 / 20%);
+    }
+  }
+
   h4 {
     margin: 0;
     color: var(--text-secondary);
@@ -16,6 +44,10 @@
 
   small {
     color: var(--text-tertiary);
+  }
+
+  .info {
+    margin-top: auto;
   }
 
   .projectLinks {
@@ -40,9 +72,19 @@
 
   @media only screen and (min-width: 768px) {
     margin-bottom: unset;
+    .placeholderContainer {
+      max-height: 300px;
+      .placeholder {
+        width: 300px;
+        height: 300px;
+      }
+    }
   }
 
   @media only screen and (min-width: 1020px) {
+    .placeholderContainer {
+      max-height: 400px;
+    }
     .projectLinks {
       display: flex;
       flex-direction: row;
