--- a/components/projects/allProjects.module.scss
+++ b/components/projects/allProjects.module.scss
@@ -48,4 +48,10 @@
       margin: auto;
     }
   }
+
+  @media only screen and (min-width: 1080px) {
+    .gallery {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
 }
