--- a/components/projects/projectDetail.module.scss
+++ b/components/projects/projectDetail.module.scss
@@ -12,7 +12,11 @@
   small {
     color: var(--text-tertiary);
     display: block;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
+  }
+
+  a {
+    color: var(--text-tertiary);
   }
 
   .card {
