--- a/components/ui/modal/contactModal.module.scss
+++ b/components/ui/modal/contactModal.module.scss
@@ -55,12 +55,6 @@
     }
   }
 
-  .linkedinLink {
-    i {
-      color: var(--text-tertiary);
-    }
-  }
-
   .action {
     margin-bottom: 20px;
     display: flex;
@@ -69,7 +63,7 @@
 
     i {
       font-size: 3.4rem;
-      color: var(--text-tertiary);
+      color: var(--background-secondary);
     }
 
     .sendLink {
