--- a/components/posts/featuredPosts.module.scss
+++ b/components/posts/featuredPosts.module.scss
@@ -17,10 +17,15 @@
 
   @media only screen and (min-width: 768px) {
     padding: 100px 25px;
+    height: 100vh;
 
     .container {
       max-width: 1200px;
       margin: auto;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .row {
