--- a/components/projects/featuredProjects.module.scss
+++ b/components/projects/featuredProjects.module.scss
@@ -1,5 +1,4 @@
 .projects {
-  min-height: 100vh;
   padding: 50px 15px;
   overflow: hidden;
 
@@ -20,10 +19,15 @@
 
   @media only screen and (min-width: 768px) {
     padding: 100px 25px;
+    height: 100vh;
 
     .container {
       max-width: 1200px;
       margin: auto;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .row {
