--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -31,22 +31,33 @@
       0 1px 5px 0 rgb(0 0 0 / 20%);
   }
 
+  .navContainer {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
   .icon {
     cursor: pointer;
     background-color: transparent;
     border: none;
 
     i {
-      font-size: 2.2rem;
+      font-size: 1.5rem;
       color: var(--text-secondary);
       padding: 5px;
+    }
+
+    &.iconMain {
+      i {
+        font-size: 2.2rem;
+      }
     }
   }
 
   &.sticky {
     position: fixed;
     top: 0;
-    color: red;
     background-color: var(--transparent-primary);
     box-shadow: 0 6px 30px 2px rgb(0 0 0 / 3%), 0 3px 15px 1px rgb(0 0 0 / 2%),
       0 1px 8px 1px rgb(0 0 0 / 1%);
@@ -77,7 +88,6 @@
     text-align: center;
     right: 0;
     top: 65px;
-    width: 100%;
     background-color: var(--transparent-primary);
 
     a {
@@ -98,11 +108,11 @@
     }
 
     .navMenu {
-      display: flex;
       width: 45%;
 
       &.responsive {
         position: unset;
+        background-color: transparent;
       }
 
       .linkWrapper {
@@ -121,10 +131,6 @@
       a:first-child {
         border-top: none;
       }
-    }
-
-    .icon {
-      display: none;
     }
   }
 }
