--- a/components/layout/navbar.module.scss
+++ b/components/layout/navbar.module.scss
@@ -3,7 +3,15 @@
   height: 65px;
   width: 100%;
   position: fixed;
-  transition: background 0.5s;
+  transition: background 0.3s;
+
+  &.sticky {
+    position: fixed;
+    top: 0;
+    background-color: var(--transparent-primary);
+    box-shadow: 0 6px 30px 2px rgb(0 0 0 / 3%), 0 3px 15px 1px rgb(0 0 0 / 2%),
+      0 1px 8px 1px rgb(0 0 0 / 1%);
+  }
 
   .container {
     display: flex;
@@ -14,6 +22,7 @@
   }
 
   .logo {
+    z-index: 3;
     color: #ffffff;
     font-weight: bold;
     background-color: #8bb2c3;
@@ -31,72 +40,68 @@
       0 1px 5px 0 rgb(0 0 0 / 20%);
   }
 
-  .navContainer {
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
+  .navMenu {
+    height: 0;
+    overflow: hidden;
+    transition: all 0.4s ease;
+    position: absolute;
+    top: 0;
+    padding-top: 65px;
 
-  .icon {
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-
-    i,
-    svg {
-      font-size: 1.5rem;
+    a {
+      font-size: 1.3rem;
       color: var(--text-secondary);
+      border-bottom: 1px solid var(--border);
+    }
 
-      padding: 5px;
+    a:first-child {
+      border-top: 1px solid var(--border);
+    }
 
-      path {
-        stroke: var(--text-secondary);
+    .linkWrapper a:hover {
+      color: var(--text-tertiary);
+    }
+
+    &.responsive {
+      height: auto;
+      width: 100%;
+      display: block;
+      text-align: center;
+      right: 0;
+      background-color: var(--transparent-primary);
+
+      a {
+        display: block;
+        padding: 25px 0;
       }
     }
   }
 
-  .iconMain {
-    height: 40px;
-  }
+  .navContainer {
+    position: relative;
+    display: flex;
+    align-items: center;
 
-  &.sticky {
-    position: fixed;
-    top: 0;
-    background-color: var(--transparent-primary);
-    box-shadow: 0 6px 30px 2px rgb(0 0 0 / 3%), 0 3px 15px 1px rgb(0 0 0 / 2%),
-      0 1px 8px 1px rgb(0 0 0 / 1%);
-  }
-}
+    .icon {
+      cursor: pointer;
+      background-color: transparent;
+      border: none;
 
-.navMenu {
-  display: none;
+      i,
+      svg {
+        font-size: 1.5rem;
+        color: var(--text-secondary);
 
-  a {
-    font-size: 1.3rem;
-    color: var(--text-secondary);
-    border-bottom: 1px solid var(--border);
-  }
+        padding: 5px;
 
-  a:first-child {
-    border-top: 1px solid var(--border);
-  }
+        path {
+          stroke: var(--text-secondary);
+        }
+      }
+    }
 
-  .linkWrapper a:hover {
-    color: var(--text-tertiary);
-  }
-
-  &.responsive {
-    width: 100%;
-    display: block;
-    position: absolute;
-    text-align: center;
-    right: 0;
-    top: 65px;
-    background-color: var(--transparent-primary);
-
-    a {
-      display: block;
-      padding: 25px 0;
+    .iconMain {
+      height: 40px;
     }
   }
 }
@@ -112,10 +117,17 @@
     }
 
     .navMenu {
+      height: auto;
+      display: flex;
       width: 45%;
+      top: 0;
+      padding-top: 0;
+      position: static;
 
       &.responsive {
-        position: unset;
+        width: 45%;
+        display: flex;
+        // position: unset;
         background-color: transparent;
       }
 
@@ -128,13 +140,16 @@
 
       a {
         border-bottom: none;
-        padding: 5px;
         filter: drop-shadow(0px 3px 2px rgb(0 0 0 / 15%));
       }
 
       a:first-child {
         border-top: none;
       }
+    }
+
+    .iconMain {
+      display: none;
     }
   }
 }
